cloud-native/kubernetes/manif-configmap-02.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d
      # We need a volume to persist the file from the ConfigMap:
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
