cloud-native/kubernetes/manif-daemonset-01.yaml
# Example of a DaemonSet that runs Fluentd logging agent.

apiVersion: apps/v1
kind: DaemonSet
metadata:
  # Must be unique within the namespace.
  name: fluentd
  labels:
    app: fluentd
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
      - name: fluentd
        image: fluent/fluentd:v0.14.10
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        # Logs for the Nodes.
        - name: varlog
          mountPath: /var/log
        # Logs for the Pods (applications).
        - name: varlibdockercontainers
          # Assumes the container engine is Docker. Different paths are used for
          # different engines: containerd (/var/log/pods) or CRI-O
          # (/var/log/containers)
          mountPath: /var/lib/docker/containers
          readOnly: true
      terminationGracePeri$odSeconds: 30
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
