cloud-native/kubernetes/manif-service-deployment-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s
  labels:
    app: hello-k8s
spec:
  type: ClusterIp     # Default value
  replicas: 2
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
      - name: nginx
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
spec:
  selector:
    app: hello-k8s    # Must match the above app label
  ports:
  - protocol: TCP
    # Exposed port.
    port: 80
    # Target port that the app is listening inside the container.
    targetPort: 80
  type: NodePort
