cloud-native/kubernetes/manif-ingress-demo.yaml
# This is the Kubernetes manifestation that runs in the
# k8s-ingress-demo.sh script

# To properly test the hostnames you need to temporarly modify the
# /etc/hosts file and add the following entrie related to the
# services:
# <EXTERNAL-IP> alpaca.local bandicoot.local
# Where EXTERNAL-IP is the Load balancer IP given to the Envoy service
# after running "minikube tunnel".

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
    - host: alpaca.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # This Service object must be available on the cluster.
                name: alpaca
                port:
                  number: 8080
    - host: bandicoot.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bandicoot
                port:
                  number: 8080
